flicker fix

--- a/src/style.scss
+++ b/src/style.scss
@@ -20,7 +20,7 @@ body {
   }
 }
 
-a:visited {
+a:link, a:visited {
   color: $light-blue;
 }
 
